    to "adapt" elements of an expression to similar, aliased expressions,
    as well as to target result set columns originally bound to a 
    table or selectable to an aliased, "corresponding" expression.  The new
    rewrite features completely consistent and accurate behavior.

  - Added a field ("info") for storing arbitrary data on schema items
    [ticket:573]    

  - fixed the close() method on Transaction when using strategy='threadlocal'

  - fix to compiled bind parameters to not mistakenly populate None
    [ticket:853]
   
  - <Engine|Connection>._execute_clauseelement becomes a public method
    Connectable.execute_clauseelement
  
- orm
  - eager loading with LIMIT/OFFSET applied no longer adds the primary 
    table joined to a limited subquery of itself; the eager loads now
    join directly to the subquery which also provides the primary table's
    columns to the result set.  This eliminates a JOIN from all eager loads
    with LIMIT/OFFSET.  [ticket:843]

  - session.refresh() and session.expire() now support an additional argument
    "attribute_names", a list of individual attribute keynames to be refreshed
    or expired, allowing partial reloads of attributes on an already-loaded 
    instance. [ticket:802]
    
  - Mapped classes may now define __eq__, __hash__, and __nonzero__ methods
    with arbitrary semantics.  The orm now handles all mapped instances on
    an identity-only basis. (e.g. 'is' vs '==') [ticket:676]

  - the "properties" accessor on Mapper is removed; it now throws an informative
    exception explaining the usage of mapper.get_property() and 
    mapper.iterate_properties

  - added having() method to Query, applies HAVING to the generated statement
    in the same way as filter() appends to the WHERE clause.
    
  - The behavior of query.options() is now fully based on paths, i.e. an
    option such as eagerload_all('x.y.z.y.x') will apply eagerloading to